build index.html

--- a/index.html
+++ b/index.html
@@ -19,12 +19,11 @@
         <div class="header-top">
             <div class="header-top__logo">
                 <img src="./images/main_logo.svg" alt="logo" class="header__logo">
-                <h5 class="header__company"></h5>
+                <h5 class="header__company fs-28">Planto.</h5>
             </div>
             <div class="menu">
                 <nav class="navbar navbar-expand-lg bg-body-tertiary">
                     <div class="container-fluid">
-                        <a class="navbar-brand" href="#">Navbar</a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
                             aria-label="Toggle navigation">
@@ -35,22 +34,22 @@
                                 <li class="nav-item">
                                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                                 </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Features</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Pricing</a>
-                                </li>
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                         aria-expanded="false">
-                                        Dropdown link
+                                        Plants Type
                                     </a>
                                     <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" href="#">Action</a></li>
-                                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                        <li><a class="dropdown-item" href="#">Small Flowers</a></li>
+                                        <li><a class="dropdown-item" href="#">Big Flowers</a></li>
+                                        <li><a class="dropdown-item" href="#">Colorfull Flowers</a></li>
                                     </ul>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">More</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Contact</a>
                                 </li>
                             </ul>
                         </div>
@@ -58,13 +57,13 @@
                 </nav>
             </div>
             <div class="header-icon">
-                <a href="" class="header-icon__link">
+                <a href="#" class="header-icon__link">
                     <img src="./images/search-icon.png" alt="icon" class="header-icon__img">
                 </a>
-                <a href="" class="header-icon__link">
+                <a href="#" class="header-icon__link">
                     <img src="./images/basket-icon.png" alt="icon" class="header-icon__img">
                 </a>
-                <a href="" class="header-icon__link">
+                <a href="#" class="header-icon__link">
                     <img src="./images/bars.png" alt="icon" class="header-icon__img">
                 </a>
             </div>
