--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 
 <body>
     <header class="header">
-        <div class="header-top">
-            <div class="header-top__logo">
+        <div class="header-top d-flex w-75 justify-content-between mx-auto">
+            <div class="header-top__logo d-flex align-items-center w-25">
                 <img src="./images/main_logo.svg" alt="logo" class="header__logo">
                 <h5 class="header__company fs-28">Planto.</h5>
             </div>
-            <div class="menu">
+            <div class="menu w-50 text-white">
                 <nav class="navbar navbar-expand-lg bg-body-tertiary">
                     <div class="container-fluid">
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -56,11 +56,11 @@
                     </div>
                 </nav>
             </div>
-            <div class="header-icon">
-                <a href="#" class="header-icon__link">
+            <div class="header-icon w-25 d-flex justify-content-end">
+                <a href="#" class="header-icon__link px-3">
                     <img src="./images/search-icon.png" alt="icon" class="header-icon__img">
                 </a>
-                <a href="#" class="header-icon__link">
+                <a href="#" class="header-icon__link px-4">
                     <img src="./images/basket-icon.png" alt="icon" class="header-icon__img">
                 </a>
                 <a href="#" class="header-icon__link">
